# Schema-Jenerator

./: .pre-commit-config.yaml  Cargo.toml  README.md
path/to/src/: main.rs  schema.rs
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  schema.rs  validation.rs
src/schema/: generators.rs  mod.rs  types.rs
test_samples/: api_response.json  product_catalog.json  user_profile.json
tests/: cli_tests.rs
